--- a/ProcesoInvestigacion.css
+++ b/ProcesoInvestigacion.css
@@ -33,3 +33,9 @@
     --framer-letter-spacing: 0px;
 }
 
+.img-card-presupuestos-montos{
+    text-align: center;
+    display: block;
+    margin: auto;
+}
+
