--- a/ProcesoInvestigacion.css
+++ b/ProcesoInvestigacion.css
@@ -20,18 +20,27 @@
 }
 
 .texto-card {
-    --framer-font-family: "Roboto";
-    --framer-font-size: 14px;
-    --framer-font-weight: 500;
-    --framer-letter-spacing: 0.4px;
-    --framer-text-color: rgba(94, 101, 110, 1);
+    font-family: "Roboto";
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.4px;
+    color: rgba(94, 101, 110, 1);
 }
 
 .texto-card-monto {
-    --framer-font-family: "Fira Sans";
-    --framer-font-size: 20px;
-    --framer-font-weight: 600;
-    --framer-letter-spacing: 0px;
+    font-family: "Fira Sans";
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 0px;
+}
+
+.texto-card-disclaimer {
+    font-family: "Roboto";
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 0.4px;
+    color: #737373;
+    ;
 }
 
 .img-card-presupuestos-montos {
@@ -42,9 +51,9 @@
 
 
 .title-card-text {
-    --framer-font-family: "Roboto";
-    --framer-font-size: 18px;
-    --framer-font-weight: 700;
-    --framer-letter-spacing: 0px;
-    --framer-text-color: rgba(0, 2, 24, 1);
+    font-family: "Roboto";
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 0px;
+    color: rgba(0, 2, 24, 1);
 }
