Feature/update html (#2)
* Update jquery and bootstrap version

* Format HTML

* New data, new form radio button and events

* Se agrego funcionalidad al seleccionar el año.

* Selector JQery

* Configuracion inicial del Chart de Proceso de Inv.

* Restructuracion de HTML

* Se agrego Pie de Carpetas de Investigacion

* Change Version

* Formato de Cards para monto y presupuesto

* Formato de Cards para montos

* Actualizacion de Datos.

* Config grafica de procesos de inv.

* Se agregaron Iconos..

* Se agregaron estilos a las img de cards

* Clean

* Clean

* Clean

* Formart chart Proceso de inv

* Formateo pie chart

* Fixed  datos y layout line and pie

* Se cambio NR por -1

* Se cambio NR por -1

* Se agrego disclaimer y estilos de la nueva card

* Se agrego disclaimer y estilos de la nueva card

* Se agrego informacion y nuevo formato para tooltip

* Se agrego informacion y nuevo formato para toolti

* New tootltip Federal

* Update data tooltip mapa

* Update data tooltip mapa

* Se agrego localstorage para guardar el estado seleccionado

* Se dio estilo a los botones de años

* Cambio de leyenda y actualizo estado veracruz

---------

Co-authored-by: Armando del Angel <113638993+aarmando2@users.noreply.github.com>

--- a/mapaStyle.css
+++ b/mapaStyle.css
@@ -7,7 +7,7 @@ body {
   position: relative;
   width: 100%;
   height: 600px;
-  padding-bottom: 50px;
+  padding-bottom: 10px;
 }
 
 .border-card {
@@ -30,8 +30,8 @@ body {
   letter-spacing: 0;
 }
 
-.format-parrafo{
-  display: flex; 
+.format-parrafo {
+  display: flex;
   justify-content: space-between;
 }
 
@@ -110,10 +110,10 @@ body {
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 120px;
+  width: 190px;
   background-color: #F2C96B;
   color: black;
-  text-align: center;
+  text-align: left;
   border-radius: 6px;
   padding: 5px 0;
   position: absolute;
@@ -130,7 +130,7 @@ body {
   content: "";
   position: absolute;
   top: 100%;
-  left: 50%;
+  left: 20%;
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
